# momentum-x

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hypothesis/constants/: b1bab6b49279fba0
config/: settings.py
docs/agents/: PROMPT_SIGNATURES.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/decisions/: ADR-013-integration-wiring.md  ADR-014-pipeline-closure.md  ADR-015-production-readiness.md  ADR-016-production-wiring.md  ADR-017-pipeline-integration.md  ADR-018-observability-vwap-shapley.md  ADR-019-full-observability.md  ADR-020-historical-tranche-server.md  ADR-021-tranche-wiring-grafana.md  ADR-022-cli-stop-report.md  ADR-023-stream-multi-docker.md  ADR-024-bridge-risk-github.md  ADR_001_MULTI_AGENT_DEBATE.md  ADR_002_DATA_PIPELINE.md  ADR_003_EXECUTION_LAYER.md  ADR_004_RATE_LIMITING_AND_DATA_FEED.md  ADR_005_OPEN_SOURCE_DX.md  ADR_006_CI_CD_AND_QUALITY_GATES.md  ADR_007_TRADE_UPDATES_TRAILING_STOP.md  ADR_008_STRUCTURED_LOGGING.md  ADR_009_POST_TRADE_FEEDBACK.md  ADR_010_SHAPLEY_ATTRIBUTION.md  ADR_011_LLM_AWARE_BACKTESTING.md  ADR_012_GEX_FILTER.md
docs/mathematics/: MOMENTUM_LOGIC.md
docs/memory/: black_box.json  graph_state.json  ontology.json
docs/research/: ALPACA_API_CONSTRAINTS.md  ARENA_LIVE_SELECTION.md  BIBLIOGRAPHY.md  CPCV_LLM_LEAKAGE.md  GEX_GAMMA_EXPOSURE.md  POST_TRADE_ANALYSIS.md  PROMPT_ARENA.md  SEC_EDGAR_INTEGRATION.md  SHAPLEY_ATTRIBUTION.md
docs/sessions/: SESSION_EXIT_S001.md  STATE_SNAPSHOT.json
ops/: docker-compose.yml
ops/grafana/: momentum_x_dashboard.json
ops/prometheus/: prometheus.yml
src/agents/: base.py  cached_wrapper.py  debate_engine.py  deep_search_agent.py  default_variants.py  fundamental_agent.py  institutional_agent.py  news_agent.py  prompt_arena.py  risk_agent.py  technical_agent.py
src/analysis/: post_trade.py  session_report.py  shapley.py
src/core/: backtest_metrics.py  backtest_simulator.py  backtester.py  llm_aware_backtester.py  llm_leakage.py  models.py  orchestrator.py  scan_loop.py  scoring.py
(+73 files in other folders)
